--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // DevTools for local development only
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
     // MySQL
     runtimeOnly 'com.mysql:mysql-connector-j'
 
