--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     ports:
       - "${APP_PORT}:8080"
     volumes:
-      - app-uploads:/app/uploads
+      - /home/ec2-user/gbswer/uploads:/app/uploads
     networks:
       - gbswer-network
     healthcheck:
@@ -55,8 +55,6 @@ services:
 
 volumes:
   redis-data:
-    driver: local
-  app-uploads:
     driver: local
 
 networks:
