--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: gbswer
   profiles:
-    active: prod
+    active: local
     group:
       local:
         - common
