--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,22 +23,33 @@ jobs:
 
     - name: Verify Java installation
       run: |
-        echo "Verifying Java installation..."
+        echo "Java version:"
         java -version
+        echo ""
         echo "JAVA_HOME: $JAVA_HOME"
+        echo "JAVA_HOME_17_X64: $JAVA_HOME_17_X64"
+        echo ""
+        echo "Java executable:"
         which java
+        ls -la "$JAVA_HOME/bin/java"
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x ./gradlew && ls -la ./gradlew
 
     - name: Verify Gradle Wrapper
       run: |
         echo "Checking Gradle Wrapper..."
-        ls -la gradlew
+        ls -la ./gradlew
         cat gradle/wrapper/gradle-wrapper.properties
 
     - name: Build with Gradle
-      run: ./gradlew build -x test --no-daemon --info
+      run: |
+        export JAVA_HOME=$JAVA_HOME_17_X64
+        export PATH=$JAVA_HOME/bin:$PATH
+        java -version
+        ./gradlew build -x test --no-daemon --info
+      env:
+        JAVA_HOME: ${{ env.JAVA_HOME_17_X64 }}
 
     - name: Login to Docker Hub
       if: github.event_name == 'push'
