--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.caching=true
 org.gradle.parallel=true
 
+# CI/CD environment optimizations
+org.gradle.daemon=false
+org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError
