--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
 org.gradle.caching=true
 org.gradle.parallel=true
 
-# CI/CD environment optimizations
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError
+
