--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,11 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build -x test --no-daemon
+      env:
+        GRADLE_OPTS: -Dorg.gradle.jvmargs="-Xmx2048m"
 
     - name: Login to Docker Hub
-      if: github.event_name == 'push'
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       uses: docker/login-action@v2
       with:
         registry: docker.io
@@ -36,8 +38,11 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      if: github.event_name == 'push'
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: |
+        TIMESTAMP=$(date +%Y%m%d_%H%M%S)
         docker build -t ${{ secrets.DOCKER_USERNAME }}/gbswer-app:latest .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/gbswer-app:$TIMESTAMP .
         docker push ${{ secrets.DOCKER_USERNAME }}/gbswer-app:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/gbswer-app:$TIMESTAMP
 
