--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,6 @@ name: Build and Deploy
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
@@ -14,35 +12,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: 'gradle'
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
-
-    - name: Build with Gradle
-      run: ./gradlew build -x test --no-daemon
-      env:
-        GRADLE_OPTS: -Dorg.gradle.jvmargs="-Xmx2048m"
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to Docker Hub
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
-        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      run: |
-        TIMESTAMP=$(date +%Y%m%d_%H%M%S)
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/gbswer-app:latest .
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/gbswer-app:$TIMESTAMP .
-        docker push ${{ secrets.DOCKER_USERNAME }}/gbswer-app:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/gbswer-app:$TIMESTAMP
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/gbswer-app:latest
 
