--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     env_file:
       - .env.prod
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD-SHELL", "redis-cli -a \"$REDIS_PASSWORD\" ping | grep PONG"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -33,7 +33,7 @@ services:
     env_file:
       - .env.prod
     ports:
-      - "${APP_PORT}:8080"
+      - "8080:8080"
     volumes:
       - /home/ec2-user/gbswer/uploads:/app/uploads
     networks:
@@ -57,3 +57,4 @@ volumes:
 networks:
   gbswer-network:
     driver: bridge
+    name: gbswer-network
