--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,6 +56,10 @@ file:
   upload-dir: ${FILE_UPLOAD_DIR}
   type: ${FILE_TYPE}
 
+server:
+  url: ${SERVER_URL:http://localhost:8080}
+
+
 verification:
   code:
     expiration-minutes: 5
